fix : 레빗 적용 (#6)